# autoime

./: CHANGELOG.md  Makefile  README.md  setup.cfg
autoime/: main.py
