[metadata]
name = autoime
version = 0.2
author = chewie
description = Automatically switch input ime
url = https://github.com/sl424/autoime
project_urls =
    Code=https://github.com/sl424/autoime
    Issues=https://github.com/sl424/autoime/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    i3ipc
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    autoime = autoime.main:main
